--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@ saved_models/
 figs/
 MIDIs/
 MIDIs_back/
+MIDIs_back_1/
 MIDIs_tmp/
 MIDIs_hr/
 musicXMLs/
 musicXMLs_hr/
 musicXMLs_back/
+musicXMLs_back_1/
 baseline_models/
 saved_tokenizers/
 data/
